# Diagnosis

./: .cproject  .project  CMakeLists.txt
packaging/: Plus.spec
src/: Plus.cpp
