CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Plus C CXX)

FILE(GLOB SRCS src/*.c)

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${DESTDIR}/bin")

SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(Xor tensorflow-lite pthread dl)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
